--- a/CounterProject/style.css
+++ b/CounterProject/style.css
@@ -11,3 +11,9 @@ button{
     font-size: 1rem;
     
 }
+.changeBy{
+    width: 5rem;
+    height: 2rem;
+    font-size: 1rem;
+    margin: 16px  8px;
+}
